@@ -219,6 +219,18 @@ public class TokeniserStateTest {
     }
 
     @Test
+    public void testUnconsumeAfterBufferUp() {
+        // test for after consume() a bufferUp occurs (look-forward) but then attempts to unconsume. Would throw a "No buffer left to unconsume"
+        String triggeringSnippet = "<title>One <span>Two";
+        char[] padding = new char[CharacterReader.readAheadLimit - triggeringSnippet.length() + 8]; // The "<span" part must be just at the limit. The "containsIgnoreCase" scan does a bufferUp, losing the unconsume
+        Arrays.fill(padding, ' ');
+        String paddedSnippet = String.valueOf(padding) + triggeringSnippet;
+        ParseErrorList errorList = ParseErrorList.tracking(1);
+        Parser.parseFragment(paddedSnippet, null, "", errorList);
+        // just asserting we don't get a WTF on unconsume
+    }
+
+    @Test
     public void testOpeningAngleBracketInsteadOfAttribute() {
         String triggeringSnippet = "<html <";
         ParseErrorList errorList = ParseErrorList.tracking(1);
